# rust-web-sql

./: .env  Cargo.toml
src/: main.rs
src/sql/: mod.rs  models.rs  routes.rs
static/: index.html
