[package]
name = "actix_web"
version = "0.1.0"
authors = ["Dominant"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#
actix-web = "2.0"

actix-rt = "1.0"
actix-files="*"
futures ="0.3.5"
serde="*"
serde_json="*"
regex="*"
anyhow="*"
async-std = { version = "1.5.0", features = [ "attributes" ] }
sqlx = { version = "0.4.0-beta.1",  features = [ "runtime-async-std", "macros","mssql","mysql" ] }
#openssl = { version="0.10" }
#sqlx = { version = "0.3.5" ,features = [ "mysql" ]}